--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
+    "@reduxjs/toolkit": "^2.6.1",
+    "formik": "^2.4.6",
+    "google-maps-react": "^2.0.6",
+    "install": "^0.13.0",
+    "lucide-react": "^0.487.0",
     "mosque-match": "file:",
     "next": "15.3.0",
+    "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-maps": "^9.4.5",
+    "react-icons": "^5.5.0",
+    "react-range": "^1.10.0",
+    "react-redux": "^9.2.0",
+    "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uninstall": "^0.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
