--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^7.28.3",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.6.1",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "google-maps-react": "^2.0.6",
     "install": "^0.13.0",
