--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^7.28.3",
     "@react-google-maps/api": "^2.20.6",
@@ -26,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-maps": "^9.4.5",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-range": "^1.10.0",
     "react-redux": "^9.2.0",
