--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/x-date-pickers": "^7.28.3",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "formik": "^2.4.6",
     "google-maps-react": "^2.0.6",
     "install": "^0.13.0",
