--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^7.28.3",
     "@react-google-maps/api": "^2.20.6",
+    "@react-google-maps/marker-clusterer": "^2.20.0",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
