--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-google-maps": "^9.4.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-range": "^1.10.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
