--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "uninstall": "^0.0.0",
     "yup": "^1.6.1"
   },
