--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
+    "emoji-picker-react": "^4.12.2",
     "formik": "^2.4.6",
     "google-maps-react": "^2.0.6",
     "install": "^0.13.0",
