--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,13 +32,20 @@ jobs:
           # Build the project
           npm run build
 
+      - name: Test SSH Connection
+        run: |
+          ssh -i key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo 'Connection successful!'"
+
       - name: Deploy to EC2
         run: |
-          scp -i key.pem -r .next public package.json ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/var/www/mosqueSearch-front
+          # Include node_modules in the transfer
+          scp -i key.pem -r .next public package.json package-lock.json node_modules ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/var/www/mosqueSearch-front
 
       - name: Restart Frontend on EC2
         run: |
           ssh -i key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd /var/www/mosqueSearch-front
-            pm2 restart mosque-frontend || pm2 start npm --name "mosque-frontend" -- start
+            npm install --production
+            pm2 delete mosque-frontend
+            pm2 start npm --name "mosque-frontend" -- start -p 3000
           EOF
