--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,33 +19,25 @@ jobs:
 
       - name: Install & Build Frontend (Next.js)
         run: |
-          # Remove existing node modules and lock file
           rm -rf node_modules
           rm -f package-lock.json
-
-          # Install dependencies with legacy peer deps
           npm install --legacy-peer-deps
-
-          # Update lock file
           npm install --package-lock-only
-
-          # Build the project
           npm run build
 
       - name: Test SSH Connection
         run: |
-          ssh -i key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo 'Connection successful!'"
+          ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo 'SSH Connection Successful'"
 
       - name: Deploy to EC2
         run: |
-          # Include node_modules in the transfer
-          scp -i key.pem -r .next public package.json package-lock.json node_modules ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/var/www/mosqueSearch-front
+          scp -o StrictHostKeyChecking=no -i key.pem -r .next public package.json package-lock.json node_modules ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/var/www/mosqueSearch-front
 
       - name: Restart Frontend on EC2
         run: |
-          ssh -i key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd /var/www/mosqueSearch-front
             npm install --production
-            pm2 delete mosque-frontend
+            pm2 delete mosque-frontend || true
             pm2 start npm --name "mosque-frontend" -- start -p 3000
           EOF
