--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,25 +19,18 @@ jobs:
 
       - name: Install & Build Frontend (Next.js)
         run: |
-          rm -rf node_modules
-          rm -f package-lock.json
           npm install --legacy-peer-deps
-          npm install --package-lock-only
           npm run build
-
-      - name: Test SSH Connection
-        run: |
-          ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo 'SSH Connection Successful'"
 
       - name: Deploy to EC2
         run: |
-          scp -o StrictHostKeyChecking=no -i key.pem -r .next public package.json package-lock.json node_modules ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/var/www/mosqueSearch-front
+          scp -o StrictHostKeyChecking=no -i key.pem -r .next public package.json package-lock.json ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/var/www/mosqueSearch-front
 
       - name: Restart Frontend on EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd /var/www/mosqueSearch-front
-            npm install --production
+            npm ci --only=production
             pm2 delete mosque-frontend || true
             pm2 start npm --name "mosque-frontend" -- start -p 3000
           EOF
