--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,21 +19,24 @@ jobs:
 
       - name: Install & Build Frontend (Next.js)
         run: |
-          rm -rf node_modules
-          rm -f package-lock.json
-
-          npm install --legacy-peer-deps
+          npm ci --legacy-peer-deps
           npm run build
 
-      - name: Deploy to EC2
+      - name: Archive build files
         run: |
-          scp -o StrictHostKeyChecking=no -i key.pem -r .next public package.json package-lock.json node_modules ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/var/www/mosqueSearch-front
+          tar -czf build.tar.gz .next public package.json package-lock.json
 
-      - name: Restart Frontend on EC2 with PM2
+      - name: Upload build to EC2
+        run: |
+          scp -o StrictHostKeyChecking=no -i key.pem build.tar.gz ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/tmp/
+
+      - name: Extract & restart on EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
+            mkdir -p /var/www/mosqueSearch-front
+            tar -xzf /tmp/build.tar.gz -C /var/www/mosqueSearch-front
             cd /var/www/mosqueSearch-front
-            npm install --production
+            npm install --omit=dev
             pm2 delete mosque-frontend || true
             pm2 start "npx next start -p 3000" --name mosque-frontend
             pm2 save
