--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-range": "^1.10.0",
     "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.1",
     "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
